chore: corrects deployment indicator alignment

--- a/src/app/cloud/[team-slug]/[project-slug]/(tabs)/(overview)/InfraOnline/index.module.scss
+++ b/src/app/cloud/[team-slug]/[project-slug]/(tabs)/(overview)/InfraOnline/index.module.scss
@@ -43,6 +43,10 @@
       font-family: var(--font-mono);
     }
   }
+
+  .deploymentIndicator {
+    gap: calc((var(--base) * 0.5) + 5px);
+  }
 }
 
 .ellipseText {
